--- a/server-ghiaccio/package.json
+++ b/server-ghiaccio/package.json
@@ -7,6 +7,7 @@
     "morgan": "^1.10.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
 }
