--- a/client-ghiaccio/package.json
+++ b/client-ghiaccio/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.7",
+    "@tippyjs/react": "^4.2.6",
+    "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.544.0",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
     "sqlite": "^5.1.1"
   },
