--- a/client-ghiaccio/package.json
+++ b/client-ghiaccio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "^2.1.6",
     "@tippyjs/react": "^4.2.6",
     "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
